--- a/pug/marcas.pug
+++ b/pug/marcas.pug
@@ -41,15 +41,17 @@ p.title MARCAS
 .carousel.slide.carousel__tablet(data-bs-ride="carousel")#carouselExampleControls1
     .carousel-inner
         .carousel-item.active
-            img(src="images/carousel/1.jpg").d-block.w-100
+            //- img(src="images/carousel/1.jpg").d-block.w-100
+            h2.carousel__marcasTxt ALLANSON   -   ASCO
         .carousel-item
-            img(src="images/carousel/2.jpg").d-block.w-100
-        .carousel-item 
-            img(src="images/carousel/3.jpg").d-block.w-100
+            h2.carousel__marcasTxt CLEAVER BROOKS  -   ECOFLAM
         .carousel-item
-            img(src="images/carousel/4.jpg").d-block.w-100
-        .carousel-item        
-            img(src="images/carousel/5.jpg").d-block.w-100     
+            h2.carousel__marcasTxt HONEYWELL  -   METRON
+        .carousel-item
+            h2.carousel__marcasTxt PICSA  -   VAYREMEX
+        .carousel-item
+            h2.carousel__marcasTxt SENTINEL  -   VIKING PUMP
+            
         button(type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev").carousel-control-prev
             span(aria-hidden="true").carousel-control-prev-icon
             span.visually-hidden Previous
