--- a/css/tablet.less
+++ b/css/tablet.less
@@ -29,6 +29,13 @@
 .carousel__desktop{
     display: none;
 }
+.carousel-item{
+    height: 100px;
+    padding-top: 30px;
+}
+.carousel__marcasTxt{
+    font-size: 3.9rem;
+}
 .marcas__propiedad p{
     font-size: @size-md;
   }
@@ -36,7 +43,8 @@
     .slideA__Content{
         width: 100%;
         &__box{
-            height: 400px !important;
+
+           
             img{
                 max-width: 75%;
                 margin: 15px 34px;
@@ -57,7 +65,7 @@
                 text-align: center;
               }
               &-cta{
-                bottom: 28px;
+                bottom: -1px !important;
               }
             
         }
@@ -82,7 +90,7 @@
         p{
             display: flex;
             align-items: center;
-            justify-content: flex-start;
+            justify-content: center;
             height: 100%;
             width: 100%;
             padding-left: 20px;
@@ -227,12 +235,18 @@
 .servicios{
     &__periodico p{
         width: 695px;
+        font-size: 2.1rem;
     }
     &__catalogo{
         &__items{
             display: grid;
             grid-template-columns: 1fr 1fr;
         &-item{
+            &-capa{
+                h3{
+                    height: 40px;
+                }
+            }
             .modal{
                 &-content{
                     &-body{
