--- a/pug/index.pug
+++ b/pug/index.pug
@@ -26,17 +26,17 @@ block content
                 //-             img(src="images/Marcas/Cleaver.png").img-fluid.slideB_logoCleaver
                 //-             a(href="contacto.html").slideB__Content__box-cta Contáctenos
 
-                .carousel-item
-                        picture.carousel-item__img
-                            source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
-                            source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
-                            img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
-                        .slide2__Content
-                            .slide2__Content__box
-                                p.slide2__Content__box-line1 MANTENIMIENTO PREVENTIVO #[br]Y#[br] CORRECTIVO
-                                p.slide2__Content__box-line2 CONVERSIONES #[br]Y#[br] CARBURACIONES
-                                p.slide2__Content__box-line3 AUTOMATIZACIÓN #[br]DE#[br] CALDERAS
-                                a(href="servicios.html").slide2__Content__box-line4 Servicios
+                //- .carousel-item
+                //-         picture.carousel-item__img
+                //-             source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
+                //-             source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
+                //-             img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
+                //-         .slide2__Content
+                //-             .slide2__Content__box
+                //-                 p.slide2__Content__box-line1 MANTENIMIENTO PREVENTIVO #[br]Y#[br] CORRECTIVO
+                //-                 p.slide2__Content__box-line2 CONVERSIONES #[br]Y#[br] CARBURACIONES
+                //-                 p.slide2__Content__box-line3 AUTOMATIZACIÓN #[br]DE#[br] CALDERAS
+                //-                 a(href="servicios.html").slide2__Content__box-line4 Servicios
                 .carousel-item
                     picture.carousel-item__img
                         source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
