--- a/pug/marcas.pug
+++ b/pug/marcas.pug
@@ -41,7 +41,6 @@ p.title MARCAS
 .carousel.slide.carousel__tablet(data-bs-ride="carousel")#carouselExampleControls1
     .carousel-inner
         .carousel-item.active
-            //- img(src="images/carousel/1.jpg").d-block.w-100
             h2.carousel__marcasTxt ALLANSON   -   ASCO
         .carousel-item
             h2.carousel__marcasTxt CLEAVER BROOKS  -   ECOFLAM
@@ -62,11 +61,11 @@ p.title MARCAS
 .carousel.slide.carousel__desktop(data-bs-ride="carousel")
     .carousel-inner
         .carousel-item.active
-            img(src="images/carousel/desktop/1.jpg").d-block.w-100
+            h2.carousel__marcasTxt ALLANSON - ASCO - CLEAVER BROOKS                    
         .carousel-item
-            img(src="images/carousel/desktop/2.jpg").d-block.w-100
-        .carousel-item 
-            img(src="images/carousel/desktop/3.jpg").d-block.w-100
+            h2.carousel__marcasTxt ECOFLAM - HONEYWELL - METRON                    
+        .carousel-item
+            h2.carousel__marcasTxt PICSA - VAYREMEX - SENTINEL  -   VIKING PUMP              
         button(type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev").carousel-control-prev
             span(aria-hidden="true").carousel-control-prev-icon
             span.visually-hidden Previous
