--- a/pug/servicios.pug
+++ b/pug/servicios.pug
@@ -44,7 +44,7 @@ block content
                         img(src="images/FotosServicios/10.jpg").d-block.w-100.img-fluid
                     button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 11")
                         img(src="images/FotosServicios/11.jpg").d-block.w-100.img-fluid
-                .carousel-inner 
+                .carousel-inner.carousel-inner-images 
                     .carousel-item.active
                         img(src="images/FotosServicios/1.jpg").d-block.w-100 
                     .carousel-item 
