--- a/pug/calderas.pug
+++ b/pug/calderas.pug
@@ -25,7 +25,7 @@ block content
                         img(src="images/Calderas/caldera-4-1200x600.jpg").d-block.w-100
                     button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5")
                         img(src="images/Calderas/caldera-5-1200x600.jpg").d-block.w-100
-                .carousel-inner 
+                .carousel-inner.carousel-inner-images 
                     .carousel-item.active 
                         img(src="images/Calderas/caldera-1-1200x600.jpg").d-block.w-100
                     .carousel-item 
