Listos ultimos cambios de mobile

--- a/pug/servicios.pug
+++ b/pug/servicios.pug
@@ -140,8 +140,8 @@ block content
                                 .modal-content-body
                                     .modal-content-body-sidebar 
                                         .modal-content-body-sidebar__images 
-                                            img(src="images/Single/hollin.jpg", alt="Hollin").img-fluid
-                                            img(src="images/Single/instalacionCalderasEquiposAux.jpg", alt="Hollin").img-fluid
+                                            img(src="images/Single/hollin.jpg", alt="Hollin").img-fluid.margin-topd
+                                            img(src="images/Single/instalacionCalderasEquiposAux.jpg", alt="Hollin").img-fluid.margin-topd
                                     .modal-content-body-content
                                         p Desmontaje, colocación, instalación, arranque de calderas y calentadores así como de:
                                         ul 
@@ -301,8 +301,8 @@ block content
                                     .modal-content-body-sidebar 
                                         
                                         .modal-content-body-sidebar__images 
-                                            img(src="images/Single/testo1.jpg").img-fluid
-                                            img(src="images/Single/testo2.jpg").img-fluid
+                                            img(src="images/Single/testo1.jpg").img-fluid.margin-topd
+                                            img(src="images/Single/testo2.jpg").img-fluid.margin-topd
                                     .modal-content-body-content
                                         p Carburación con equipo analizador de gases de combustión marca Testo para sistemas mecánicos y electrónicos.
                                 .modal-footer.modal-content-footer
