--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,9 @@ body {
   right: 20px;
   z-index: 1;
 }
+.margin-topd {
+  margin: 60px 30px auto auto;
+}
 .carousel__marcasTxt {
   text-align: center;
   margin: 0 auto;
@@ -216,11 +219,15 @@ body {
   position: relative;
   bottom: 18px;
   padding: 0 39px;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Inter', sans-serif;
+}
+.index .carousel-inner .carousel-item .slideA__Content__box-txtsomos strong {
+  font-weight: 800;
+  font-size: 3.1rem;
 }
 .index .carousel-inner .carousel-item .slideA__Content__box-txtservicio {
   font-family: 'Inter', sans-serif;
-  font-size: 2.6rem;
+  font-size: 2.7rem;
   text-align: center;
   font-weight: 600;
   margin-bottom: 0px;
@@ -587,7 +594,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 1.3rem;
+  font-size: 1.8rem;
   width: auto;
   top: 0;
   margin: 0px 10px 0px 10px;
@@ -808,10 +815,10 @@ body {
 }
 .index__area__prioridad__items-item .box-txt a {
   text-decoration: none;
-  color: #ffffff;
+  color: #000000;
   font-size: 1.4rem;
   text-align: center;
-  background-color: #831d22;
+  background-color: #fff;
   padding: 2px 10px;
   border-radius: 4px;
 }
