--- a/css/style.less
+++ b/css/style.less
@@ -17,6 +17,9 @@
 	right:20px;
   z-index: 1;
 }
+.margin-topd{
+  margin: 60px 30px auto auto;
+}
 .carousel__marcasTxt{
   text-align: center;
   margin: 0 auto;
@@ -120,11 +123,15 @@
               position: relative;
               bottom: 18px;
               padding: 0 39px;
-              font-family: @font-family3;
+              font-family: @font-family1;
+              strong{
+                font-weight: 800;
+                font-size: 3.1rem;
+              }
             }
             &-txtservicio{
               font-family: @font-family1;
-              font-size: 2.6rem;
+              font-size: 2.7rem;
               text-align: center;
               font-weight: 600;
               margin-bottom: 0px;
@@ -400,7 +407,7 @@
           color: @color-white;
           justify-content: center;
           align-items: center;
-          font-size: 1.3rem;
+          font-size: 1.8rem;
           width: auto;
           top: 0;
           margin: 0px 10px 0px 10px;
@@ -572,10 +579,10 @@
                 }
                 a{
                   text-decoration: none;
-                  color: @color-white;
+                  color: @color-primary;
                   font-size: @size-md;
                   text-align: center;
-                  background-color: #831d22;
+                  background-color: #fff;
                   padding: 2px 10px;
                   border-radius: 4px;
                 }
