Listos los cambios tablet

--- a/pug/calderas.pug
+++ b/pug/calderas.pug
@@ -14,7 +14,7 @@ block content
             h2.carousel__marcasTxt CLEAVER BROOKS
         .calderas__carousel
             .carousel.slide(data-bs-ride="carousel")#carouselExampleIndicators
-                .carousel-indicators 
+                .carousel-indicators.carousel-indicatorsCalderas
                     button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1").active
                         img(src="images/Calderas/caldera-1-1200x600.jpg").d-block.w-100
                     button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2")
@@ -25,7 +25,7 @@ block content
                         img(src="images/Calderas/caldera-4-1200x600.jpg").d-block.w-100
                     button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5")
                         img(src="images/Calderas/caldera-5-1200x600.jpg").d-block.w-100
-                .carousel-inner.carousel-inner-images 
+                .carousel-inner.carousel-inner-imagesCalderas
                     .carousel-item.active 
                         img(src="images/Calderas/caldera-1-1200x600.jpg").d-block.w-100
                     .carousel-item 
