--- a/css/tablet.css
+++ b/css/tablet.css
@@ -89,11 +89,39 @@ body {
 .carousel__marcasTxt {
   font-size: 3.9rem;
 }
+.carousel__marcasTxt strong {
+  color: #fff;
+  margin: 0 10px;
+}
+.carousel-control-next-icon {
+  height: 35px !important;
+  width: 35px !important;
+}
+.carousel-control-prev-icon {
+  height: 35px !important;
+  width: 35px !important;
+}
+.carousel-inner-images {
+  height: 796px;
+}
+.carousel-inner-imagesCalderas {
+  height: 466px;
+}
+.carousel-indicators {
+  bottom: 15px !important;
+}
+.carousel-indicators.carousel-indicatorsCalderas {
+  bottom: 52px !important;
+}
 .marcas__propiedad p {
   font-size: 1.4rem;
 }
 .index .slideA__Content {
   width: 100%;
+}
+.index .slideA__Content__box {
+  position: absolute;
+  top: 15px;
 }
 .index .slideA__Content__box img {
   max-width: 75%;
@@ -104,23 +132,28 @@ body {
 }
 .index .slideA__Content__box-txtsomos {
   font-family: 'Poppins', sans-serif;
-  font-size: 2.2rem;
+  font-size: 3.8rem !important;
   text-align: center;
-  margin: 5px 50px;
+  margin: 5px 100px !important;
+  line-height: 3.9rem;
+}
+.index .slideA__Content__box-txtsomos strong {
+  font-size: 4rem !important;
 }
 .index .slideA__Content__box-txtservicio {
   font-family: 'Poppins', sans-serif;
-  font-size: 3.2rem;
+  font-size: 4rem !important;
   text-align: center;
 }
 .index .slideA__Content__box-cta {
-  bottom: -1px !important;
+  bottom: 13px !important;
 }
 .index .slideB__Content__box-cta {
   bottom: 28px;
 }
 .index .slide2__Content__box-line4 {
-  margin-top: 14px;
+  position: absolute;
+  bottom: 57px;
 }
 .index__contactenos p {
   display: -webkit-box;
@@ -134,7 +167,6 @@ body {
           justify-content: center;
   height: 100%;
   width: 100%;
-  padding-left: 20px;
 }
 .index__area__acerca__box {
   display: -ms-grid;
@@ -374,7 +406,9 @@ body {
 }
 .contacto__convencer p {
   margin-left: 0;
-  margin-right: 20px;
+  /* margin-right: 20px; */
+  width: 100%;
+  text-align: center;
 }
 .contacto .form__container__cta {
   margin: 0 70px !important;
