--- a/css/tablet.less
+++ b/css/tablet.less
@@ -35,6 +35,30 @@
 }
 .carousel__marcasTxt{
     font-size: 3.9rem;
+    strong{
+        color: #fff;
+        margin: 0 10px;
+    }
+}
+.carousel-control-next-icon{
+    height: 35px !important;
+    width: 35px !important;
+}
+.carousel-control-prev-icon{
+    height: 35px !important;
+    width: 35px !important;
+}
+.carousel-inner-images{
+    height: 796px;
+}
+.carousel-inner-imagesCalderas{
+    height: 466px;
+}
+.carousel-indicators{
+    bottom: 15px !important;
+}
+.carousel-indicators.carousel-indicatorsCalderas{
+    bottom: 52px !important;
 }
 .marcas__propiedad p{
     font-size: @size-md;
@@ -43,7 +67,8 @@
     .slideA__Content{
         width: 100%;
         &__box{
-
+            position: absolute;
+            top: 15px;
            
             img{
                 max-width: 75%;
@@ -55,17 +80,21 @@
             }
             &-txtsomos{
                 font-family: @font-family3;
-                font-size: 2.2rem;
+                font-size: 3.8rem !important;
                 text-align: center;
-                margin: 5px 50px;
+                margin: 5px 100px !important;
+                line-height: 3.9rem;
+                strong{
+                    font-size: 4rem !important;
+                }
               }
               &-txtservicio{
                 font-family: @font-family3;
-                font-size: 3.2rem;
+                font-size: 4rem !important;
                 text-align: center;
               }
               &-cta{
-                bottom: -1px !important;
+                bottom: 13px !important;
               }
             
         }
@@ -80,7 +109,8 @@
     .slide2__Content{
         &__box{
             &-line4{
-                margin-top: 14px;
+                position: absolute;
+                bottom: 57px;
                
             }
         }
@@ -93,7 +123,7 @@
             justify-content: center;
             height: 100%;
             width: 100%;
-            padding-left: 20px;
+            
         }
 
         
@@ -296,7 +326,9 @@
         justify-content: flex-end;
         p{
             margin-left: 0;
-            margin-right: 20px;
+            /* margin-right: 20px; */
+            width: 100%;
+            text-align: center;
         }
     }
     .form__container__cta{
