--- a/pug/index.pug
+++ b/pug/index.pug
@@ -15,16 +15,16 @@ block content
                             p.slideA__Content__box-txtsomos SOMOS ESPECIALISTAS EN CALDERAS #[br] #[strong CLEAVER BROOKS]
                             a(href="contacto.html").slideA__Content__box-cta Contáctenos
                             //- img(src="images/Marcas/logo_termiz_.png").img-fluid.slideA_logoTermiz
-                .carousel-item
-                    picture.carousel-item__img
-                        source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
-                        source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
-                        img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
-                    .slideB__Content 
-                        .slideB__Content__box
-                            p SOMOS #[br]#[strong ESPECIALISTAS EN CALDERAS]
-                            img(src="images/Marcas/Cleaver.png").img-fluid.slideB_logoCleaver
-                            a(href="contacto.html").slideB__Content__box-cta Contáctenos
+                //- .carousel-item
+                //-     picture.carousel-item__img
+                //-         source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
+                //-         source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
+                //-         img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
+                //-     .slideB__Content 
+                //-         .slideB__Content__box
+                //-             p SOMOS #[br]#[strong ESPECIALISTAS EN CALDERAS]
+                //-             img(src="images/Marcas/Cleaver.png").img-fluid.slideB_logoCleaver
+                //-             a(href="contacto.html").slideB__Content__box-cta Contáctenos
 
                 .carousel-item
                         picture.carousel-item__img
