--- a/pug/marcas.pug
+++ b/pug/marcas.pug
@@ -41,15 +41,15 @@ p.title MARCAS
 .carousel.slide.carousel__tablet(data-bs-ride="carousel")#carouselExampleControls1
     .carousel-inner
         .carousel-item.active
-            h2.carousel__marcasTxt ALLANSON   -   ASCO
+            h2.carousel__marcasTxt ALLANSON   #[strong -]   ASCO
         .carousel-item
-            h2.carousel__marcasTxt CLEAVER BROOKS  -   ECOFLAM
+            h2.carousel__marcasTxt CLEAVER BROOKS  #[strong -]   ECOFLAM
         .carousel-item
-            h2.carousel__marcasTxt HONEYWELL  -   METRON
+            h2.carousel__marcasTxt HONEYWELL  #[strong -]   METRON
         .carousel-item
-            h2.carousel__marcasTxt PICSA  -   VAYREMEX
+            h2.carousel__marcasTxt PICSA  #[strong -]   VAYREMEX
         .carousel-item
-            h2.carousel__marcasTxt SENTINEL  -   VIKING PUMP
+            h2.carousel__marcasTxt SENTINEL  #[strong -]   VIKING PUMP
             
         button(type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev").carousel-control-prev
             span(aria-hidden="true").carousel-control-prev-icon
@@ -61,11 +61,11 @@ p.title MARCAS
 .carousel.slide.carousel__desktop(data-bs-ride="carousel")
     .carousel-inner
         .carousel-item.active
-            h2.carousel__marcasTxt ALLANSON - ASCO - CLEAVER BROOKS                    
+            h2.carousel__marcasTxt ALLANSON #[strong -] ASCO #[strong -] CLEAVER BROOKS                    
         .carousel-item
-            h2.carousel__marcasTxt ECOFLAM - HONEYWELL - METRON                    
+            h2.carousel__marcasTxt ECOFLAM #[strong -] HONEYWELL #[strong -] METRON                    
         .carousel-item
-            h2.carousel__marcasTxt PICSA - VAYREMEX - SENTINEL  -   VIKING PUMP              
+            h2.carousel__marcasTxt PICSA #[strong -] VAYREMEX #[strong -] SENTINEL  #[strong -]   VIKING PUMP              
         button(type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev").carousel-control-prev
             span(aria-hidden="true").carousel-control-prev-icon
             span.visually-hidden Previous
