--- a/pug/index.pug
+++ b/pug/index.pug
@@ -110,7 +110,7 @@ block content
                             img(src="images/SVG/engrane.svg").img-fluid
                         .box-txt
                             p SERVICIOS
-                            a(href="servicios.html") Más información 
+                            a(href="servicios.html")#[strong Más información] 
 
                 .index__area__prioridad__items-item.index__area__prioridad__items-item-m
                         .box-img
@@ -118,14 +118,14 @@ block content
 
                         .box-txt
                             p PRODUCTOS
-                            a(href="productos.html") Más información 
+                            a(href="productos.html") #[strong Más información] 
 
                 .index__area__prioridad__items-item
                         .box-img 
                             img(src="images/SVG/caldera.svg").img-fluid
                         .box-txt
                             p CALDERAS
-                            a(href="calderas.html") Más información
+                            a(href="calderas.html") #[strong Más información] 
                             
         .carousel__marcas 
             include ../marcas.html
