--- a/css/desktop.less
+++ b/css/desktop.less
@@ -148,7 +148,12 @@
                 width: 400px;
                 overflow: hidden;
             }
-
+            &-txtservicio{
+                bottom: 33px;
+            }
+            &-txtsomos{
+                bottom: 49px;
+            }
         }
     }
     .slideB__Content{
