--- a/css/style.less
+++ b/css/style.less
@@ -262,6 +262,9 @@
           justify-content: center;
           align-items: center;
             &__box{
+              p{
+                font-weight: 800;
+              }
               position: absolute;
               top: 27px;
               display: flex;
