--- a/css/style.less
+++ b/css/style.less
@@ -617,6 +617,7 @@
           &-item{
             display: flex;
             align-items: flex-start;
+            margin: 10px auto;
             img{
               width: 25px;
               margin-top: 5px;
