--- a/pug/index.pug
+++ b/pug/index.pug
@@ -62,7 +62,7 @@ block content
                         img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
                     .slide1__Content
                         .slide1__Content__box
-                            p.slide1__Content__box-line1 30 años
+                            p.slide1__Content__box-line1 Más de #[br]30 años
                             p.slide1__Content__box-line2 #[strong DE EXPERIENCIA #[br]NOS RESPALDAN] 
                             a(href="empresa.html").slide1__Content__box-line3 Conózcanos     
             button(type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev").carousel-control-prev
@@ -99,11 +99,11 @@ block content
             //-     source(media="(min-width:768px)" srcset="images/experienciaFondo-tablet.jpg")  
             //-     img(src="images/experienciaFondo-mobile.jpg").img-fluid
             .index__area__experiencia-txt 
-                p La experiencia profesional de 30 años de servicio nos respaldan para ayudarle a seleccionar el #[strong equipo industrial] más adecuado a sus necesidades, así como también para brindarle la solución más idónea a sus problemas de operación en #[strong calderas], lo cual nos permite sin lugar a dudas ofrecer servicios y productos de las más alta calidad a nuestros clientes como una opción seria y confiable.
+                p La experiencia profesional de más de 30 años de servicio nos respaldan para ayudarle a seleccionar el #[strong equipo industrial] más adecuado a sus necesidades, así como también para brindarle la solución más idónea a sus problemas de operación en #[strong calderas], lo cual nos permite sin lugar a dudas ofrecer servicios y productos de las más alta calidad a nuestros clientes como una opción seria y confiable.
             .index__area__experiencia-img 
                 img(src="images/experiencia.jpg", alt="Ingeniero colocando una caldera").img-fluid
         .index__area__prioridad 
-            p.index__area__prioridad__title En #[strong SERVICIO TÉCNICO A CALDERAS] nuestra prioridad es usted por lo que le ofrecemos:
+            p.index__area__prioridad__title En #[strong SERVICIO TÉCNICO A CALDERAS] nuestra prioridad es usted, por lo que, le ofrecemos:
             .index__area__prioridad__items
                 .index__area__prioridad__items-item
                         .box-img 
