Agregando el target

--- a/components/footer.pug
+++ b/components/footer.pug
@@ -57,7 +57,7 @@ footer
             .footer__box__body-socialmedia
                 .footer__box__body-socialmedia__icon
                     h2 SÍGUENOS
-                    a(href="https://www.facebook.com/SERTECCALDERAS") 
+                    a(href="https://www.facebook.com/SERTECCALDERAS" target="_blank") 
                         img(src="images/SVG/face.svg", alt="Ícono de facebook")
     .footer__foot 
         .rights
