--- a/components/template.html
+++ b/components/template.html
@@ -96,7 +96,7 @@
           </div>
           <div class="footer__box__body-socialmedia">
             <div class="footer__box__body-socialmedia__icon">
-              <h2>SÍGUENOS</h2><a href="https://www.facebook.com/SERTECCALDERAS"> <img src="images/SVG/face.svg" alt="Ícono de facebook"/></a>
+              <h2>SÍGUENOS</h2><a href="https://www.facebook.com/SERTECCALDERAS" target="_blank"> <img src="images/SVG/face.svg" alt="Ícono de facebook"/></a>
             </div>
           </div>
         </div>
